--- a/app/build.gradle
+++ b/app/build.gradle
@@ -95,6 +95,8 @@ dependencies {
     // Parser
     implementation "com.google.code.gson:gson:$gson_version"
 
+    implementation "com.jakewharton.threetenabp:threetenabp:$threetenabpVersion"
+
     // Debugging
     debugImplementation "com.amitshekhar.android:debug-db:$debug_db_version"
 
