- add ForecastEntity.kt class

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,17 +20,28 @@ android {
         multiDexEnabled true
     }
 
+    dataBinding {
+        enabled = true
+    }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
+
     buildTypes {
         // Add this debug config to provide debug settings
         debug {
-            buildConfigField("String", "BASE_URL", "\"https://api.projects.bootcamp.mindorks.com/batch/green/\"")
-            buildConfigField("String", "API_KEY", "\"HBNA19QVVAPP\"")
+            buildConfigField("String", "BASE_URL", "\"https://api.openweathermap.org/data/\"")
+            //buildConfigField("String", "API_KEY", "\"HBNA19QVVAPP\"")
         }
         release {
             minifyEnabled true // to apply the proguard
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-            buildConfigField("String", "BASE_URL", "\"https://api.projects.bootcamp.mindorks.com/batch/green/\"")
-            buildConfigField("String", "API_KEY", "\"HBNA19QVVAPP\"")
+            buildConfigField("String", "BASE_URL", "\"https://api.openweathermap.org/data/\"")
+           // buildConfigField("String", "API_KEY", "\"HBNA19QVVAPP\"")
         }
     }
 }
