- delete unnecessary files - add layout_folders for tablets

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,19 +12,20 @@
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
 
-        <activity android:name="com.aster.app.weather.ui.main.MainActivity"
-                  android:noHistory="true">
+        <activity
+            android:name=".ui.splash.SplashActivity"
+            android:noHistory="true">
 
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-                <action android:name="android.intent.action.VIEW"/>
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".ui.main.MainActivity" />
 
-        <activity android:name="com.aster.app.weather.ui.dummy.DummyActivity"/>
-        <activity android:name="com.aster.app.weather.ui.login.LoginActivity"/>
-        <activity android:name="com.aster.app.weather.ui.signup.SignUpActivity"/>
+
     </application>
 
 
